src/objects/Install_Location__c.object
<CustomObject>
    <description>AstrumPM - This object is defined as a single location on a property that has a measured TSRF, Pitch, and Azimuth.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Physical_Surface__r.Property__r.Property_Owner__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Solar_Access__c</fullName>
        <label>Annual Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apr_Solar_Access__c</fullName>
        <label>Apr Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aug_Solar_Access__c</fullName>
        <label>Aug Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <description>Azimuth of Install Location</description>
        <label>Azimuth</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Solar_Access__c</fullName>
        <label>Dec Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Feb_Solar_Access__c</fullName>
        <label>Feb Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jan_Solar_Access__c</fullName>
        <label>Jan Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jul_Solar_Access__c</fullName>
        <label>Jul Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jun_Solar_Access__c</fullName>
        <label>Jun Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Enter Skyline Site using this format: &quot;S01&quot;  Enter Tree Removal options in this format: &quot;S01A&quot; and &quot;S01B&quot;</inlineHelpText>
        <label>Location</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_Solar_Access__c</fullName>
        <label>Mar Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_Solar_Access__c</fullName>
        <label>May Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nov_Solar_Access__c</fullName>
        <label>Nov Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How Many Stories Up Is This Install Location?</description>
        <inlineHelpText>How Many Stories Up Is This Install Location?</inlineHelpText>
        <label>Number of Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Solar_Access__c</fullName>
        <label>Oct Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_Surface_Assigned_Letter__c</fullName>
        <formula>text(Physical_Surface__r.Physical_Surface_Assigned_Letter__c)</formula>
        <label>Physical Surface Assigned Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Surface_Letter__c</fullName>
        <label>Physical Surface Letter</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Surface_Type__c</fullName>
        <formula>TEXT(Physical_Surface__r.Surface_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Surface Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Surface__c</fullName>
        <label>Physical Surface</label>
        <referenceTo>Physical_Surface__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>Physical_Surface__r.Property__r.Property_Owner__r.Name</formula>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sep_Solar_Access__c</fullName>
        <label>Sep Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shading__c</fullName>
        <label>Shading</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stuctural_Members__c</fullName>
        <label>Stuctural Members</label>
        <picklist>
            <picklistValues>
                <fullName>Steel Beam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Rafters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Truss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suneye_Tilt_and_Orientation_Factor_TOF__c</fullName>
        <formula>Physical_Surface__r.Suneye_Tilt_and_Orien_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suneye Tilt and Orientation Factor (TOF)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sunnova_Site_Quality__c</fullName>
        <description>Sunnova Site Quality</description>
        <label>Sunnova Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Type__c</fullName>
        <label>Surface Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asphalt Shingle</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Slate Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Corrogated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TSRF__c</fullName>
        <label>TSRF</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tree_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tree Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Single_SunEye_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verified Single SunEye Data</description>
        <label>Verified Single SunEye Data</label>
        <type>Checkbox</type>
    </fields>
    <label>Install Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Install Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TSRF_Must_Be_less_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>TSRF__c &gt;1</errorConditionFormula>
        <errorDisplayField>TSRF__c</errorDisplayField>
        <errorMessage>TSRF Cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>